1999-07-30  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenu.m: rewrote sections to handle new popupbutton
	code. New initialiser - initWithPopUpButton:. New ivar
	menu_isBeholdenToPopUpButton.
	* Source/NSMenuView.m: ditto. removed code that dealt with
	popupbutton. Also fixed bug which disallowed selecting an item if
	you dragged of a popup and dragged back up.
	* Source/NSPopUpButton.m: complete rewrite. now this class should
	be almost completly MacOSX compliant. For kicks try
	popupbuttons.app in core/Testing to see.
	* Source/NSPopUpButtonCell.m: modifications to make NSPopUpButton
	work. Also implemented representedObject as I think it should be.
	Also made popupbutton arrow image work for popups that use images.
	* Source/NSTableColumn.m: fixes to make some things work a little
	better.
	* Source/NSTableView.m: fixes to make things behave. Still doesn't
	compile in, but it is getting there. Modifications will have to
	be made to NSScrollView before we can use this class.
	* Source/NSTabView.m: fixed (- contentRect) for the no tabs case.

	* Images/: added common_UpAndDownArrowSmall.tiff and
	common_DownArrowSmall.tiff for popupbuttons with images in them.

	* Headers/NSMenu.h: mods for changes.
	* Headers/NSPopUpButton.h: ditto.
	* Headers/NSPopUpButtonCell.h: ditto, also changed to inherit from
	NSMenuItemCell.

1999-07-29  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSEvent.h: Add AppKit dragging events.
	* Headers/gnustep/gui/NSGraphicsContext.h: Added some internal drag
	methods.
	* Source/NSGraphicsContext.m (-_dragInfo): New method.
	(-_postExternalEvent:): Likewise.

	* Headers/gnustep/gui/NSPasteboard.h: Added some internal mime type
	conversions.
	* Source/NSPasteboard.m (-_initMimeMappings): New method.
	(-mimeTypeForPasteboardType:): Likewise.
	(-pasteboardTypeForMimeType:): Likewise.

	* Headers/gnustep/gui/NSWindow.h: Added some drag ivars.
	* Source/NSView.m (-dragImage...): Get the shared dragView and
	call it. 